--- a/index.css
+++ b/index.css
@@ -1,4 +1,36 @@
-#heading {
-   color: red
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
 }
- 
+.logo {
+  width: 100px;
+}
+.nav-items > ul {
+  font-size: 20px;
+  display: flex;
+  list-style-type: none;
+}
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.search {
+  padding: 10px;
+}
+.rest-card {
+  width: 250px;
+  padding: 5px;
+  margin: 5px;
+}
+.rest-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+}
+.rest-logo {
+  width: 100%;
+}
+.rest-container {
+  display: flex;
+  flex-wrap: wrap;
+}
