Episode 7 part 1. React Router

--- a/index.css
+++ b/index.css
@@ -15,9 +15,6 @@
   padding: 10px;
   margin: 10px;
 }
-.search {
-  padding: 10px;
-}
 .rest-card {
   width: 250px;
   padding: 5px;
@@ -35,5 +32,26 @@
   flex-wrap: wrap;
 }
 .filter {
+  margin: 0 10px;
+  display: flex;
+}
+.filter-inner {
+  margin: 0 10 px;
   padding: 10px;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.shimmer-card {
+  background-color: #cec8c86c;
+  margin: 10px;
+  width: 200px;
+  height: 300px;
+}
+.search {
+  padding: 10px;
+}
+.search-text {
+  margin: 0 10 0 0px;
 }
