--- a/index.css
+++ b/index.css
@@ -31,6 +31,10 @@
   display: flex;
   flex-wrap: wrap;
 }
+.rest-link {
+  color: black;
+  text-decoration: none;
+}
 .filter {
   margin: 0 10px;
   display: flex;
