--- a/index.css
+++ b/index.css
@@ -1,65 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-.logo {
-  width: 100px;
-}
-.nav-items > ul {
-  font-size: 20px;
-  display: flex;
-  list-style-type: none;
-}
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-}
-.rest-card {
-  width: 250px;
-  padding: 5px;
-  margin: 5px;
-}
-.rest-card:hover {
-  border: 1px solid black;
-  cursor: pointer;
-}
-.rest-logo {
-  width: 100%;
-}
-.rest-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.rest-link {
-  color: black;
-  text-decoration: none;
-}
-.filter {
-  margin: 0 10px;
-  display: flex;
-}
-.filter-inner {
-  margin: 0 10 px;
-  padding: 10px;
-}
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.shimmer-card {
-  background-color: #cec8c86c;
-  margin: 10px;
-  width: 200px;
-  height: 300px;
-}
-.search {
-  padding: 10px;
-}
-.search-text {
-  margin: 0 10 0 0px;
-}
-.user-card {
-  padding: 10px;
-  border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
